[gd_scene load_steps=2 format=3 uid="uid://crm8223tgtnjj"]

[ext_resource type="Script" path="res://Interfaces/MainMenu.gd" id="1_orr3u"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_orr3u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_left = 45.0
offset_top = 24.0
offset_right = 472.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 56
text = "Imaginarium Parade "

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 511.0
offset_top = 92.0
offset_right = 588.0
offset_bottom = 118.0
text = "Prototype
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="About" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
